# whisperx-openai-api

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
app/: Dockerfile  main.py
app/endpoints/: audio.py
app/schemas/: audio.py
app/services/: transcription.py
app/tests/: conftest.py  test_audio_transcriptions.py
app/tests_with_gpu/: conftest.py  test_transcribe.py
app/tests_with_gpu/fixtures/: sample_en_1_expected.json
app/utils/: config.py  lifespan.py
docs/: testing_with_gpu.md
